# simple-etl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
simple_etl/: __init__.py
simple_etl/utils/: etl.py  object.py
tests/: test_new_path.py  test_simple_etl.py
