[tool.poetry]
name = "simple-etl"
version = "0.2.0"
description = ""
authors = ["Davi Wesley <davi.wesley@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jmespath = "1.0.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
ipdb = "^0.13.9"
bandit = "^1.7.4"
autoflake = "^1.7.7"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
